add baidu stats

--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="">
+        <meta name="baidu-site-verification" content="aD6xGHtllx" />
 
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -245,6 +246,16 @@
 			padding-top:322px;
 		}
 		</style>
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?41937b3633e78bafd26b74a693e79796";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+</script>
+
     </head>
     <body oncontextmenu="window.event.returnValue=false" ondragstart="return false" onselectstart="return false">
         <!--[if lt IE 7]>
