--- a/views/news.html
+++ b/views/news.html
@@ -654,6 +654,16 @@
 					border-bottom: 1px solid white;
 				}
 		</style>
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?41937b3633e78bafd26b74a693e79796";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+</script>
+
     </head>
 	<body>
 		<!--[if lt IE 7]>
