--- a/views/contact.html
+++ b/views/contact.html
@@ -600,6 +600,16 @@
 			}
 		}
 		</style>
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?41937b3633e78bafd26b74a693e79796";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+    </script>
+
     </head>
 	<body>
 		<!--[if lt IE 7]>
@@ -705,17 +715,6 @@
 			});
 			</script>
 			
-			
-			
-			<script>
-			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-			  ga('create', 'UA-10224456-13', 'auto');
-			  ga('send', 'pageview');
-
-			</script>
 		</body>
 </html>
