--- a/views/detail.html
+++ b/views/detail.html
@@ -582,6 +582,16 @@
 			    *display: inline
 			}
 		</style>
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?41937b3633e78bafd26b74a693e79796";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+</script>
+
     </head>
 	<body>
 		<!--[if lt IE 7]>
