--- a/views/home.html
+++ b/views/home.html
@@ -1001,6 +1001,15 @@
 			}
 		}
 		</style>
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?41937b3633e78bafd26b74a693e79796";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+</script>
 
     </head>
 	<body>
