baidu stat / fix foto detail bug

--- a/views/backend/statistics.html
+++ b/views/backend/statistics.html
@@ -33,7 +33,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="https://www.google.com/analytics/web/#home/a40133822w69229745p71305695/">
+				<a href="http://tongji.baidu.com/web/welcome/ico?s=41937b3633e78bafd26b74a693e79796">
 					<span class="glyph chart"></span>
 					统计
 				</a>
