--- a/views/index.html
+++ b/views/index.html
@@ -13,28 +13,32 @@
         <meta name="MobileOptimized" content="320">
 		<meta http-equiv="cleartype" content="on">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
         <!--<link rel="shortcut icon" href="img/touch/apple-touch-icon.png">-->
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-		
+
         <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#222222">
-		
+
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="">
+        <meta name="apple-mobile-web-app-title" content="Cyanrhino">
         <meta name="baidu-site-verification" content="aD6xGHtllx" />
+
+        <link rel="dns-prefetch" href="//www.cyanrhino.com">
+        <link rel="prefetch" href="http://www.cyanrhino.com/showcase" />
+        <link rel="prerender" href="http://www.cyanrhino.com/showcase" />
 
 
         <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
-		
-        
+
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -180,7 +184,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-		
+
 		@font-face {
 			font-family: 'Din-Light';
 			src: url('fonts/din-light.eot');
@@ -192,7 +196,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-	
+
 		@font-face {
 			font-family: 'STXIHEI';
 			src: url('deibi-webfont.eot');
@@ -234,7 +238,7 @@
 			cursor:pointer;
 		}
 		.primary-bg {
-			background-color: #5dc3df;		
+			background-color: #5dc3df;
 		}
 		.logo{
 			margin:0 auto;
@@ -264,7 +268,7 @@
 			<div class="main">
 				<section class="overlay primary-bg">
 					<div class="logo page-width">
-						<object type="application/x-shockwave-flash" 
+						<object type="application/x-shockwave-flash"
 						data="img/logo.swf" wmode="transparent"
 						width="76" height="50">
 						<param name="movie" value="img/logo.swf" />
@@ -286,7 +290,7 @@
 				</section>
 			</div>
 
-    
+
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
 		<script src="js/helper.js"></script>
