--- a/views/career.html
+++ b/views/career.html
@@ -13,26 +13,28 @@
         <meta name="MobileOptimized" content="320">
 		<meta http-equiv="cleartype" content="on">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
         <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-		
+
         <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#222222">
-		
+
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="">
+        <meta name="apple-mobile-web-app-title" content="Cyanrhino">
 
 
         <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
-		
+
+        <link rel="dns-prefetch" href="//www.cyanrhino.com">
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -100,7 +102,7 @@
 				background-color: rgba(0,0,0,.5);
 				-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
 			}
-		
+
 		@font-face {
 			font-family: 'Din-LightAlternate';
 			src: url('fonts/din-lightalternate.eot');
@@ -112,7 +114,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-		
+
 		@font-face {
 			font-family: 'Din-Light';
 			src: url('fonts/din-light.eot');
@@ -124,7 +126,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-	
+
 		@font-face {
 			font-family: 'STXIHEI';
 			src: url('deibi-webfont.eot');
@@ -176,7 +178,7 @@
 			100% {opacity:0;}
 		}
 		</style>
-		
+
 		<style>
 		.navbar {
 			width: 100%;
@@ -361,7 +363,7 @@
 			margin: 30px 0;
 			font-family:'STXIHEI','华文细黑';
 		}
-			
+
 		</style>
 		<style>
 		@media only screen and (max-width:825px){
@@ -388,7 +390,7 @@
 				background-repeat:no-repeat;
 				background-size:100% auto;
 			}
-			
+
 		}
 		@media only screen and (min-width:826px) and (max-width:1099px){
 			.page-width{width:820px!important;margin:auto;}
@@ -421,7 +423,7 @@
 				font-size: 24px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		@media only screen and (min-width:1100px) and (max-width:1374px){
 			.page-width{width:1095px!important;margin:auto;}
@@ -482,7 +484,7 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		@media only screen and (min-width:1650px) and (max-width:1924px){
 			.page-width{width:1645px!important;margin:auto;}
@@ -515,7 +517,7 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		@media only screen and (min-width:1925px){
 			.page-width{width:1645px!important;margin:auto;}
@@ -548,7 +550,7 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		</style>
         <script>
@@ -566,15 +568,15 @@
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 			<![endif]-->
-			
-				
-					
-					
+
+
+
+
 		<div class="main">
 				<header>
 					<div class="navbar">
 						<div class="logo page-width">
-							<object type="application/x-shockwave-flash" 
+							<object type="application/x-shockwave-flash"
 							data="img/logo.swf" wmode="transparent"
 							width="76" height="50">
 							<param name="movie" value="img/logo.swf" />
@@ -582,7 +584,7 @@
 							<param name="quality" value="high"/>
 							<embed name="Sample" value="img/logo.swf"></embed>
 						</object>
-					
+
 						<ul id="js-main-nav" class="nav">
 							<li class="subnav"><a href="javascript:void(0);"><span>About</span></a>
 								<div class="subnav__div">
@@ -598,7 +600,7 @@
 								</div>
 							</li>
 						</ul>
-					
+
 					</div>
 				</div>
 			</header>
@@ -614,10 +616,10 @@
 				<div class="module-overlay-cover"></div>
 			</div>
 			<div class="home-banner"></div>
-			
-			
+
+
 			<div class="clearfix"></div>
-			
+
 			<div class="career page-width">
 
 				<h1 class="title">career</h1>
@@ -629,11 +631,11 @@
 					</ul>
 					<p>
 						我们招募对喜爱设计,热爱生活的平面/产品设计师: <br />
-						如果你娴熟使用Photoshop、illustrator,或者擅长CAD,FLASH,3DMAX等设计软件...<br /> 
-						如果你拥有给力的排版能力..<br /> 
-						如果你手绘能力出众,色彩感强烈,喜爱绘画并擅长手绘板以及后期上色...<br /> 
+						如果你娴熟使用Photoshop、illustrator,或者擅长CAD,FLASH,3DMAX等设计软件...<br />
+						如果你拥有给力的排版能力..<br />
+						如果你手绘能力出众,色彩感强烈,喜爱绘画并擅长手绘板以及后期上色...<br />
 						如果你熟悉产品/包装设计并对材质熟悉..<br />
-						如果你喜欢创意,乐于不断创新..<br /> 
+						如果你喜欢创意,乐于不断创新..<br />
 						如果你对时尚及传统文化有着特别的认识,并可以将两种理念融合进产品设计中...<br />
 						如果你喜欢沟通客户,能快速理解客户的设计需求并能独立策划方案..<br />
 						如果你不断学习,吃苦耐劳,享受团队协作的成果..<br />
@@ -644,22 +646,22 @@
 					</p> -->
 				</article>
 			</div>
-			
-		
-		</div>
-		
-			
-	
 
-    
+
+		</div>
+
+
+
+
+
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 		<script src="js/plugins.js"></script>
 		<script src="js/helper.js"></script>
 		<script src="js/main.js"></script>
 
 
-			
-			
+
+
 			<script>
 			$(function(){
 				$('.nav').on('mouseover','.subnav',function(){
@@ -669,16 +671,16 @@
 					$('.subnav').removeClass('hovering');
 					$('.subnav__div').removeClass('hover');
 				});
-				
-				
+
+
 				$.get('/pagecontent/career',function(article){
 					$('.career > article').html(article[0].content);
 				});
-				
+
 			});
 			</script>
-			
-			
+
+
 
 
 		</body>
