--- a/views/contact.html
+++ b/views/contact.html
@@ -13,26 +13,28 @@
         <meta name="MobileOptimized" content="320">
 		<meta http-equiv="cleartype" content="on">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
         <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-		
+
         <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#222222">
-		
+
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="">
+        <meta name="apple-mobile-web-app-title" content="Cyanrhino">
+
+        <link rel="dns-prefetch" href="//www.cyanrhino.com">
 
 
         <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
-		
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -100,7 +102,7 @@
 				background-color: rgba(0,0,0,.5);
 				-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
 			}
-		
+
 		@font-face {
 			font-family: 'Din-LightAlternate';
 			src: url('fonts/din-lightalternate.eot');
@@ -112,7 +114,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-		
+
 		@font-face {
 			font-family: 'Din-Light';
 			src: url('fonts/din-light.eot');
@@ -124,7 +126,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-	
+
 		@font-face {
 			font-family: 'STXIHEI';
 			src: url('deibi-webfont.eot');
@@ -165,7 +167,7 @@
 			100% {opacity:0;}
 		}
 		</style>
-		
+
 		<style>
 		body{
 			background-color:#5dc3df;
@@ -356,7 +358,7 @@
 				position:absolute; z-index:900; top:332px; padding:20px;
 			}
 		</style>
-		
+
 		<style>
 		@media only screen and (max-width:825px){
 		    .nav{
@@ -385,7 +387,7 @@
                 margin:0;
                 padding-left:25px;
                 font-size:10px;
-                
+
             }
             .contact li a{
                 font-size:10px;
@@ -414,7 +416,7 @@
 				background-repeat:no-repeat;
 				background-size:100% auto;
 			}
-			
+
 		}
 		@media only screen and (min-width:826px) and (max-width:1099px){
 			.page-width{width:820px!important;margin:auto;}
@@ -443,7 +445,7 @@
 				width: 30% !important;
 				margin-top:80px !important;
 			}
-		
+
    		 	.heading--feature::before{
    				font-size:40px;
    		 	}
@@ -456,7 +458,7 @@
 			.contact li.pull-right{
 				margin-left:10px;
 			}
-			
+
 		}
 		@media only screen and (min-width:1100px) and (max-width:1374px){
 			.page-width{width:1095px!important;margin:auto;}
@@ -522,7 +524,7 @@
 			.main footer{
 				top:402px; padding:40px;
 			}
-			
+
 		}
 		@media only screen and (min-width:1650px) and (max-width:1924px){
 			.page-width{width:1645px!important;margin:auto;}
@@ -560,7 +562,7 @@
 			.main footer{
 				top:502px; padding:40px;
 			}
-			
+
 		}
 		@media only screen and (min-width:1925px){
 			.page-width{width:1645px!important;margin:auto;}
@@ -618,7 +620,7 @@
 			<header>
 				<div class="navbar">
 					<div class="logo page-width">
-						<object type="application/x-shockwave-flash" 
+						<object type="application/x-shockwave-flash"
 						data="img/logo.swf" wmode="transparent"
 						width="76" height="50">
 						<param name="movie" value="img/logo.swf" />
@@ -626,7 +628,7 @@
 						<param name="quality" value="high"/>
 						<embed name="Sample" value="img/logo.swf"></embed>
 					</object>
-					
+
 					<ul id="js-main-nav" class="nav">
 						<li class="subnav"><a href="javascript:void(0);"><span>About</span></a>
 							<div class="subnav__div">
@@ -642,19 +644,19 @@
 							</div>
 						</li>
 					</ul>
-					
+
 				</div>
 			</div>
 		</header>
-				
-					
-					
+
+
+
 		<div class="main">
 			<div class="page-width">
 				<blockquote class="heading--feature">
-					
+
 					<p>The pleasure of imagination.</p>
-					
+
 				</blockquote>
 				<footer class="page-width">
 					<ul class="contact">
@@ -662,43 +664,43 @@
 							上海市黄浦区南苏州路333号20楼
 							<p>No.333 South Suzhou Road,Shanghai,China,200002</p>
 						</li>
-					
+
 						<li class="pull-right">
 							<a href="http://www.cyanrhino.com">www.cyanrhino.com</a>
 						</li>
-					
+
 						<li class="pull-right">
 							F +021 52387577
 						</li>
 						<li class="pull-right">
 							<a href="tel:+8602152387577">T +021 52387577</a>
 						</li>
-					</ul>	
+					</ul>
 				</footer>
 			</div>
 			<div class="module-overlay">
 				<div class="module-overlay-cover"></div>
 			</div>
 			<div class="home-banner"></div>
-			
-			
-			
-			
-		
-		</div>
-		
-			
-	
 
-    
+
+
+
+
+		</div>
+
+
+
+
+
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 		<script src="js/plugins.js"></script>
 		<script src="js/helper.js"></script>
 		<script src="js/main.js"></script>
 
 
-			
-			
+
+
 			<script>
 			$(function(){
 				$('.nav').on('mouseover','.subnav',function(){
@@ -708,13 +710,13 @@
 					$('.subnav').removeClass('hovering');
 					$('.subnav__div').removeClass('hover');
 				});
-				
-				
-			
-				
+
+
+
+
 			});
 			</script>
-			
+
 
 		</body>
 </html>
