--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,9 @@
 
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="">
+        <meta name="apple-mobile-web-app-title" content="Cyanrhino">
+
+        <link rel="dns-prefetch" href="//www.cyanrhino.com">
 
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -1016,7 +1018,7 @@
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 			<![endif]-->
-			
+
 
 
 
@@ -1095,14 +1097,21 @@
                     <div class="item <%=layout[i].layout%>" data-num="<%=layout[i].index%>" style="background-image:url(<%=layout[i].realPath%>);">
                         <div class="ch-info">
                             <div class="ch-info-back">
-                                <a href="/showcase/<%=layout[i].filename%>">
+                                <%for(var j=0;j< data.length; j++){
+                                    if(data[j] && data[j].filename==layout[i].filename) {
+                                        %>
+                                        <a href="/showcase/<%=data[j]._id%>">
+                                        <%
+                                    }
+                                }%>
+
                                     <span>showcase</span>
                                     <h3><%
 										for(var j=0;j< data.length; j++){
 											if(data[j] && data[j].filename==layout[i].filename) {
 										%>
 											<%=data[j].content%>
-										<%	
+										<%
 											}
 										}
 										%></h3>
@@ -1111,7 +1120,7 @@
 											if(data[j] && data[j].filename==layout[i].filename){
 										%>
 											<%=data[j].title%>
-										<%	
+										<%
 											}
 										}
 										%> <i class="fa fa-caret-right"></i></p>
