--- a/views/news.html
+++ b/views/news.html
@@ -13,26 +13,28 @@
         <meta name="MobileOptimized" content="320">
 		<meta http-equiv="cleartype" content="on">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
         <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-		
+
         <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#222222">
-		
+
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="">
+        <meta name="apple-mobile-web-app-title" content="Cyanrhino">
+
+        <link rel="dns-prefetch" href="//www.cyanrhino.com">
 
 
         <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
-		
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -100,7 +102,7 @@
 				background-color: rgba(0,0,0,.5);
 				-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
 			}
-		
+
 		@font-face {
 			font-family: 'Din-LightAlternate';
 			src: url('fonts/din-lightalternate.eot');
@@ -112,7 +114,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-		
+
 		@font-face {
 			font-family: 'Din-Light';
 			src: url('fonts/din-light.eot');
@@ -124,7 +126,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-	
+
 		@font-face {
 			font-family: 'STXIHEI';
 			src: url('deibi-webfont.eot');
@@ -174,7 +176,7 @@
 			100% {opacity:0;}
 		}
 		</style>
-		
+
 		<style>
 		.navbar {
 			width: 100%;
@@ -323,7 +325,7 @@
 				 letter-spacing: .02em;
 			}
 		</style>
-		
+
 		<style>
 		@media only screen and (max-width:825px){
 		    .nav{
@@ -349,7 +351,7 @@
 				background-repeat:no-repeat;
 				background-size:100% auto;
 			}
-			
+
 		}
 		@media only screen and (min-width:826px) and (max-width:1099px){
 			.page-width{width:820px!important;margin:auto;}
@@ -382,7 +384,7 @@
 				font-size: 24px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		@media only screen and (min-width:1100px) and (max-width:1374px){
 			.page-width{width:1095px!important;margin:auto;}
@@ -443,7 +445,7 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		@media only screen and (min-width:1650px) and (max-width:1924px){
 			.page-width{width:1645px!important;margin:auto;}
@@ -476,7 +478,7 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		@media only screen and (min-width:1925px){
 			.page-width{width:1645px!important;margin:auto;}
@@ -509,11 +511,11 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			
+
 		}
 		</style>
 		<style>
-	
+
 		nav.pagination ul {
 			margin:20px 0 0;
 			padding:0;
@@ -569,8 +571,8 @@
 			box-sizing: border-box;
 			text-transform: uppercase;
 		}
-		
-		
+
+
 		.hover-animate-up--span > i,
 		.hover-animate-up--span > span{
 			display:table-cell;
@@ -669,15 +671,15 @@
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 			<![endif]-->
-			
-				
-					
-					
+
+
+
+
 		<div class="main">
 				<header>
 					<div class="navbar">
 						<div class="logo page-width">
-							<object type="application/x-shockwave-flash" 
+							<object type="application/x-shockwave-flash"
 							data="img/logo.swf" wmode="transparent"
 							width="76" height="50">
 							<param name="movie" value="img/logo.swf" />
@@ -685,7 +687,7 @@
 							<param name="quality" value="high"/>
 							<embed name="Sample" value="img/logo.swf"></embed>
 						</object>
-					
+
 						<ul id="js-main-nav" class="nav">
 							<li class="subnav"><a href="javascript:void(0);"><span>About</span></a>
 								<div class="subnav__div">
@@ -701,7 +703,7 @@
 								</div>
 							</li>
 						</ul>
-					
+
 					</div>
 				</div>
 			</header>
@@ -717,8 +719,8 @@
 				<!-- <div class="module-overlay-cover"></div> -->
 			</div>
 			<div class="home-banner"></div>
-			
-			
+
+
 			<div class="clearfix"></div>
 			<div class="container page-width">
 				<section class="news-detail">
@@ -729,17 +731,17 @@
 								<time datetime="<%=feature[i].postdate%>" pubdate="pubdate" class="pubdate"><%=(feature[i].postdate.getMonth()+1)+'/'+ feature[i].postdate.getDate()%></time>
 								<%=feature[i].title%>
 							</h2>
-							
+
 						</header>
 						<p>
-							<%-feature[i].content%>							
+							<%-feature[i].content%>
 						</p>
 					</article>
-					<%}%>					
+					<%}%>
 				</section>
-				<aside class="news-list">  
+				<aside class="news-list">
 					<h3>news</h3>
-					<ul>  
+					<ul>
 						<% list.forEach(function(news){ %>
 							<li>
 								<a href="javascript:;">
@@ -748,8 +750,8 @@
 								</a>
 								<p><%=news.content%></p>
 							</li>
-						<% }) %>						
-					</ul>  
+						<% }) %>
+					</ul>
 				</aside>
 			</div>
 			<nav class='pagination page-width text-right' role='toolbar'>
@@ -763,10 +765,10 @@
 					<li><a rel="next" href="">&rarr;</a></li>
 				</ul>
 			</nav>
-			
-		
+
+
 		</div>
-		
+
 		<div class="back-to">
 			<a href="#" class="back-to--top">
 				<span class="hover-animate-up--span">
@@ -778,17 +780,17 @@
 				</span>
 			</a>
 		</div>
-	
 
-    
+
+
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 		<script src="js/plugins.js"></script>
 		<script src="js/helper.js"></script>
 		<script src="js/main.js"></script>
 
 
-			
-			
+
+
 			<script>
 			$(function(){
 				$('.nav').on('mouseover','.subnav',function(){
@@ -798,7 +800,7 @@
 					$('.subnav').removeClass('hovering');
 					$('.subnav__div').removeClass('hover');
 				});
-				
+
 				$('.back-to--top').hover(function() {
 					$(this).find(".hover-animate-up--span:first").clearQueue().stop().animate({top: "-100px"}, {duration: 400});
 					$(this).find(".hover-animate-up--span:last").clearQueue().stop().delay(400).animate({top: "0px"}, {duration: 750});
@@ -806,7 +808,7 @@
 					$(this).find(".hover-animate-up--span:first").clearQueue().stop().animate({top: "0px"}, {duration: 500});
 					$(this).find(".hover-animate-up--span:last").clearQueue().stop().animate({top: "200px"}, {duration: 500});
 				});
-			
+
 				$('.news-list li a').on('click',function(e){
 					if('block'!=$(this).next('p').css('display')){
 						$('.news-list li p').slideUp();
@@ -815,9 +817,9 @@
 				});
 			});
 			</script>
-			
-			
-			
+
+
+
 			<script>
 			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
