--- a/views/home.html
+++ b/views/home.html
@@ -1098,12 +1098,13 @@
                         <div class="ch-info">
                             <div class="ch-info-back">
                                 <%for(var j=0;j< data.length; j++){
-                                    if(data[j] && data[j].filename==layout[i].filename) {
+                                    if(data[j]._doc && (data[j]._doc.filename==layout[i].filename) ) {
                                         %>
-                                        <a href="/showcase/<%=data[j]._id%>">
+                                        <a href="/showcase/<%=data[j]._doc._id%>">
                                         <%
                                     }
                                 }%>
+
 
                                     <span>showcase</span>
                                     <h3><%
