--- a/views/home.html
+++ b/views/home.html
@@ -1098,9 +1098,9 @@
                         <div class="ch-info">
                             <div class="ch-info-back">
                                 <%for(var j=0;j< data.length; j++){
-                                    if(data[i] && data[j]._doc && (data[j]._doc.filename==layout[i].filename) ) {
+                                    if(data[j] && data[j]._doc && (encodeURI(data[j]._doc.filename)==layout[i].filename) ) {
                                         %>
-                                        <a href="/showcase/<%=data[j]._doc._id%>">
+                                        <a href="/showcase/<%=encodeURI(data[j]._doc._id)%>">
                                         <%
                                     }
                                 }%>
